--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "extra": {
         "bolt-screenshots": [
+            "screenshots/teaser.png",
             "screenshots/screenshot1.png",
             "screenshots/screenshot2.PNG",
             "screenshots/screenshot3.PNG",
